raw/ap-southeast-1/security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0f83f6c2107c98f87",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0a772f108977d9208",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0f83f6c2107c98f87",
            "OwnerId": "647828570435",
            "GroupName": "launch-wizard-2",
            "Description": "launch-wizard-2 created 2023-03-28T11:32:50.887Z",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-06f316c5ba19065e4",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "productLine",
                    "Value": "crossborder-payment"
                },
                {
                    "Key": "env",
                    "Value": "dev"
                }
            ],
            "VpcId": "vpc-0a772f108977d9208",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-06f316c5ba19065e4",
            "OwnerId": "647828570435",
            "GroupName": "payment-dev-needs",
            "Description": "payment dev ",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "http",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "ssh",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3001,
                    "ToPort": 3001,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "mysql",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3000,
                    "ToPort": 3000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "https",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0b137222325e31dff",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0b137222325e31dff",
            "OwnerId": "647828570435",
            "GroupName": "rds-mysql",
            "Description": "Created by RDS management console",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "lending vpc subnet",
                            "CidrIp": "10.30.0.0/16"
                        },
                        {
                            "Description": "aliyun flashwire debitcard outer ip01",
                            "CidrIp": "8.219.252.129/32"
                        },
                        {
                            "Description": "aliyun flashwire debitcard outer ip02",
                            "CidrIp": "8.219.255.121/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-07e52c200c7dd67e5",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-07e52c200c7dd67e5",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-07e52c200c7dd67e5"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-038390ba0086acdbd",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-038390ba0086acdbd",
            "OwnerId": "647828570435",
            "GroupName": "vpn-sg",
            "Description": "allow vpn subnet in singapore",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 65535,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "vpn vpc all traffic",
                            "CidrIp": "10.101.0.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-089a41cf3ce182bbc",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "company",
                    "Value": "1token"
                },
                {
                    "Key": "productLine",
                    "Value": "cam"
                }
            ],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-089a41cf3ce182bbc",
            "OwnerId": "647828570435",
            "GroupName": "1token-specified-ipaddr-http-https",
            "Description": "allow specified ips to https or http",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "alow all ip https",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-067daf3efa7a75f28",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-067daf3efa7a75f28",
            "OwnerId": "647828570435",
            "GroupName": "lending-allow-inner-http-https",
            "Description": "allow inner vpc traffic 80 443",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "10.30.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9010,
                    "ToPort": 9010,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "lending-admin",
                            "CidrIp": "10.30.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "10.30.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0f27900337939902e",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-021391a2d0eadb6b1",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0f27900337939902e",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-0f27900337939902e"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-07887e82bee32ec06",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-07887e82bee32ec06",
            "OwnerId": "647828570435",
            "GroupName": "lending-ssh",
            "Description": "launch-wizard-2 created 2022-11-11T04:36:33.313Z",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "10.30.0.0/16"
                        },
                        {
                            "Description": "lg jump server",
                            "CidrIp": "10.0.0.108/32"
                        },
                        {
                            "Description": "lg  vpn vpc",
                            "CidrIp": "10.0.100.0/24"
                        },
                        {
                            "Description": "singapore tcp vpn",
                            "CidrIp": "10.101.0.0/25"
                        },
                        {
                            "Description": "jumpserver",
                            "CidrIp": "10.0.0.82/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "icmp",
                    "FromPort": -1,
                    "ToPort": -1,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "ping internal",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-087f6297f8edd5aac",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "env",
                    "Value": "prod"
                },
                {
                    "Key": "productLine",
                    "Value": "lending"
                },
                {
                    "Key": "company",
                    "Value": "flashwire"
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-087f6297f8edd5aac",
            "OwnerId": "647828570435",
            "GroupName": "lending-nfs-sharing",
            "Description": "open nfs needed ports",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 20048,
                    "ToPort": 20048,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "staging dest ",
                            "CidrIp": "10.30.6.30/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 111,
                    "ToPort": 111,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "staging dest ",
                            "CidrIp": "10.30.6.30/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "udp",
                    "FromPort": 111,
                    "ToPort": 111,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "staging dest ",
                            "CidrIp": "10.30.6.30/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "udp",
                    "FromPort": 20048,
                    "ToPort": 20048,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "staging dest ",
                            "CidrIp": "10.30.6.30/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 2049,
                    "ToPort": 2049,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "staging dest",
                            "CidrIp": "10.30.6.30/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0733aca612213ea70",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "productLine",
                    "Value": "lending"
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0733aca612213ea70",
            "OwnerId": "647828570435",
            "GroupName": "lending-allow-http-https",
            "Description": "allow-http-https",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "allow all http https",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "allow all http https",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0b7462ce7c73c120b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 0,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "productLine",
                    "Value": "cam"
                },
                {
                    "Key": "company",
                    "Value": "1token"
                },
                {
                    "Key": "env",
                    "Value": "prod"
                }
            ],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0b7462ce7c73c120b",
            "OwnerId": "647828570435",
            "GroupName": "cam-monitoring",
            "Description": "for 1token productline prometheus monitoring",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9253,
                    "ToPort": 9253,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "php-fpm_exporter port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 6379,
                    "ToPort": 6379,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9090,
                    "ToPort": 9090,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "prometheus port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3000,
                    "ToPort": 3000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "grafana port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9100,
                    "ToPort": 9100,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "node exporter port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9121,
                    "ToPort": 9121,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis exporter",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-09c066d8c0b2aa63e",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-84f318e1",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-09c066d8c0b2aa63e",
            "OwnerId": "647828570435",
            "GroupName": "launch-wizard-1",
            "Description": "launch-wizard-1 created 2021-02-04T23:53:54.159-08:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-03fd264839760bc0d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0c3712644ef5a4efb",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-03fd264839760bc0d",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-03fd264839760bc0d"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0e0058d5e721be5aa",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0e0058d5e721be5aa",
            "OwnerId": "647828570435",
            "GroupName": "internal-system-private-defualt-sg",
            "Description": "launch-wizard-2 created 2022-01-15T17:34:21.875-08:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "lg jump server to ssh",
                            "CidrIp": "10.0.0.108/32"
                        },
                        {
                            "Description": "only allow vpn to ssh",
                            "CidrIp": "10.0.100.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0cfe3f77075b91249",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 0,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "productLine",
                    "Value": "cobo"
                }
            ],
            "VpcId": "vpc-021391a2d0eadb6b1",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0cfe3f77075b91249",
            "OwnerId": "647828570435",
            "GroupName": "cobompc-monitoring",
            "Description": "for cobo mpc monitoring",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9253,
                    "ToPort": 9253,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "php-fpm_exporter port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 6379,
                    "ToPort": 6379,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9090,
                    "ToPort": 9090,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "prometheus port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3000,
                    "ToPort": 3000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "grafana port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9100,
                    "ToPort": 9100,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "node exporter port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9121,
                    "ToPort": 9121,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis exporter",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-56d91f33",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-84f318e1",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-56d91f33",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-56d91f33"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-02641b131f832606d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0a772f108977d9208",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-02641b131f832606d",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-02641b131f832606d"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-05a86b6cb6b3f031d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0a772f108977d9208",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-05a86b6cb6b3f031d",
            "OwnerId": "647828570435",
            "GroupName": "windows-remote-desktop",
            "Description": "windows connect",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0d1922d4c6a151e9e",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-021391a2d0eadb6b1",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0d1922d4c6a151e9e",
            "OwnerId": "647828570435",
            "GroupName": "cobo-ssh",
            "Description": "launch-wizard-2 created 2022-11-24T16:36:26.117Z",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-07e5856813800f8e3",
            "IpPermissionsEgress": [],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-07e5856813800f8e3",
            "OwnerId": "647828570435",
            "GroupName": "is-1token-cam",
            "Description": "Allow vpn IP access cam.zingpays.com",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow vpn.zingpays.com to access cam.zingpays.com and camgrafana.zingpays.com",
                            "CidrIp": "10.0.100.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-01d49fc2e45633747",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "env",
                    "Value": "staging"
                },
                {
                    "Key": "productLine",
                    "Value": "lending"
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-01d49fc2e45633747",
            "OwnerId": "647828570435",
            "GroupName": "lending-staging-db",
            "Description": "for lending staging env db",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3307,
                    "ToPort": 3307,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "lending subnets  allow haproxy mysql port",
                            "CidrIp": "10.30.0.0/16"
                        },
                        {
                            "CidrIp": "8.219.252.129/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "10.0.0.0/8"
                        },
                        {
                            "Description": "aliyun debitcard mps staging outer ip",
                            "CidrIp": "8.219.252.129/32"
                        },
                        {
                            "Description": "aliyun debitcard mps staging outer ip",
                            "CidrIp": "8.219.255.121/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-05f1dc3aae56f97b7",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "productLine",
                    "Value": "lending"
                },
                {
                    "Key": "env",
                    "Value": "prod"
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-05f1dc3aae56f97b7",
            "OwnerId": "647828570435",
            "GroupName": "lending-monitoring",
            "Description": "for lending monitoring",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9253,
                    "ToPort": 9253,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "php-fpm_exporter port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 6379,
                    "ToPort": 6379,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 8405,
                    "ToPort": 8405,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "haproxy prometheus port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9090,
                    "ToPort": 9090,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "prometheus port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3000,
                    "ToPort": 3000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "grafana port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9100,
                    "ToPort": 9100,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "node exporter port",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 9121,
                    "ToPort": 9121,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis exporter",
                            "CidrIp": "10.0.0.0/8"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-097b951737fd04d5d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-097b951737fd04d5d",
            "OwnerId": "647828570435",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "647828570435",
                            "GroupId": "sg-097b951737fd04d5d"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0c5876898e0f4b087",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0b7fe214033d48811",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-0c5876898e0f4b087",
            "OwnerId": "647828570435",
            "GroupName": "internal-system-interal-connection",
            "Description": "Allow all the connections inside IS-private subnet",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all the connections inside IS-private subnet",
                            "CidrIp": "10.20.1.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "allow zone a lb connections",
                            "CidrIp": "10.20.0.0/24"
                        },
                        {
                            "Description": "allow zone b lb connections",
                            "CidrIp": "10.20.2.0/24"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-094e8a667ff7e3f7b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "productLine",
                    "Value": "lending"
                }
            ],
            "VpcId": "vpc-0e8a205860906c944",
            "SecurityGroupArn": "arn:aws:ec2:ap-southeast-1:647828570435:security-group/sg-094e8a667ff7e3f7b",
            "OwnerId": "647828570435",
            "GroupName": "lending-rediscluster",
            "Description": "allow redis port",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 6379,
                    "ToPort": 6379,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "redis port",
                            "CidrIp": "10.30.0.0/16"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
